# spice_up_coordinator

./: CMakeLists.txt  README.md  coordinate_frame_converter.py  package.xml  pose_est_server.py  requirements.txt
action/: SpiceUpBottlePick.action
config/: spice_up_coordination.yaml  spice_up_coordinator.yaml
launch/: all.launch
scripts/: main.py  pose_processor.py  spice_up_action_client.py  spice_up_action_server.py
srv/: FindIndex.srv  GetSpiceName.srv  IDXAcquisition.srv  ShelfPose.srv  SpiceName.srv
